@@ -4434,4 +4434,5 @@ Changelog for GXemul:
 		Continuing on the dyntrans core: page allocation. The basics
 		(page allocation and LRU deallocation) have been implemented,
 		but not really tested in practice yet.
-20100130	Reimplementing the M88K ldcr instruction.
+20100130	Reimplementing the M88K ldcr instruction, and a slow version
+		of the st instruction (store 32-bit word).
